--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <img src="static/images/logo-baru.svg" alt="">
                 </div>
                 <p>Kepada Bapak/Ibu/Saudara/i</p>
-                <h5>Bayu Agung Prasetio</h5>
+                <h5>Bayu Agung</h5>
                 <p>Maaf apabila ada kesalahan pada penulisan nama/gelar</p>
                 <div class="wp-center">
                   <button type="button" class="btn btn-open" data-bs-dismiss="modal"><i class="fa-solid fa-envelope-open"></i> Buka Undangan</button>
