--- a/index.html
+++ b/index.html
@@ -61,24 +61,53 @@
         <p class="date-reception mobile">Minggu,</p>
         <p class="date-reception mobile">15 Mei 2022</p>
         <p class="date-reception mobile">09:00 - Selesai</p>
+        <br>
+        <br>
+        <p class="date-title">Akad Pernikahan <br>14 Mei 2022 Pukul: 09:00</p>
       </div>
     </section>
     <section class="place page-section" id="place">
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <img class="maps-img" src="static/images/Map.jpg">
-            <a class="btn direction mobile" href="https://goo.gl/maps/aGV7GRmc7WUV2J3B9">Arahkan saya</a>
+            <div class="maps-img">
+              <iframe width="100%" height="350px" id="gmap_canvas" src="https://maps.google.com/maps?q=divisi%20studio&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            </div>
+            <a class="btn direction mobile" href="https://www.google.com/maps/place/Divisi+Studio/@-7.093184,112.3101809,21z/data=!4m5!3m4!1s0x0:0xf2333870a0528bbe!8m2!3d-7.0930346!4d112.3101921">Arahkan saya</a>
           </div>
           <div class="col-md-5">
-            <p class="maps-title">Lokasi Resepsi</p>
+            <p class="maps-title">Lokasi</p>
             <p class="maps-detail">Kebonsari RT/RW 04/01, Sukodadi, Lamongan</p>
-            <a class="btn direction" href="https://goo.gl/maps/aGV7GRmc7WUV2J3B9">Arahkan saya</a>
+            <a class="btn direction" href="https://www.google.com/maps/place/Divisi+Studio/@-7.093184,112.3101809,21z/data=!4m5!3m4!1s0x0:0xf2333870a0528bbe!8m2!3d-7.0930346!4d112.3101921">Arahkan saya</a>
           </div>
         </div>
       </div>
     </section>
-
+    <section class="closing" id="closing">
+      <div class="container">
+        <p class="closing-1">Tanpa mengurangi rasa hormat, harap mematuhi standar protokol kesehatan Covid-19 saat menghadiri acara pernikahan kami.</p>
+        <ul>
+          <li>Mengecek suhu tubuh</li>
+          <li>Selalu menggunakan masker</li>
+          <li>Mencuci tangan atau memakai hand sanitizer</li>
+          <li>Menjaga jarak minimal 1 meter</li>
+        </ul>
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <p class="closing-2">Suatu kehormatan dan kebahagiaan bagi kami apabila Bapak/Ibu/Saudara(i) berkenan hadir dan memberi doa restu pada acara pernikahan kami.</p>
+          </div>
+        </div>
+        <p class="closing-3">Wassalamu’alaikum warahmatullahi wabarakatuh</p>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="wedding-gift">
+          <h5>Wedding Gift</h5>
+          <p>Bagi Keluarga dan Sahabat yang ingin mengirimkan hadiah, silahkan mengirimkannya melalui :</p>
+        </div>
+      </div>
+    </section>
     <section class="form-result page-section" id="formResult">
       <div id="slider" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
