--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img class="top-logo-img" src="static/images/nav-logo.svg">
           </div>
           <div class="link">
-            <a href="#bride">Mempelai</a>
+            <a href="#opening">Mempelai</a>
             <a href="#date">Waktu & Tempat</a>
           </div>
         </div>
@@ -190,8 +190,8 @@
           </div>
           <div class="col-md-6">
             <ul>
-              <li>Mempelai</li>
-              <li>Waktu & Tempat</li>
+              <li><a href="#opening">Mempelai</a></li>
+              <li><a href="#date">Waktu & Tempat</a></li>
             </ul>
             <p>Want to make an invitation like this? Find me on <a target="blank" href="https://www.instagram.com/afifrudin_/">instagram</a></p>
           </div>
